--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/enzyme": "^3.10.11",
     "@types/uuid": "^8.3.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "ts-jest": "^27.1.3"
   }
 }
