--- a/package.json
+++ b/package.json
@@ -6,19 +6,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/fabric": "^4.5.6",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "fabric": "^4.6.0",
     "fabricjs-react": "^1.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -47,11 +38,19 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/enzyme": "^3.10.11",
+    "@types/fabric": "^4.5.6",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.19",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
-    "ts-jest": "^27.1.3"
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.4"
   }
 }
