--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv-expand": "^9.0.0",
     "fabric": "^4.6.0",
     "fabricjs-react": "^1.0.8",
+    "gremlin": "^3.6.1",
     "identity-obj-proxy": "^3.0.0",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
@@ -28,7 +29,7 @@
     "web-vitals": "^3.0.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "docker run --name matrixdb --publish=7474:7474 --publish=7687:7687 --volume=./data:/data --env=NEO4J_AUTH=none -d --rm neo4j && node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
