--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.1",
     "@types/gremlin": "^3.6.0",
     "gremlin": "^3.6.1",
     "reflect-metadata": "^0.1.13",
