seemingly successfully seeded the DB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+    "[typescript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+      },
+    "[typescriptreact]": {
+      "editor.defaultFormatter":"vscode.typescript-language-features"
+    }
 }
