--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "local:db:start": "docker run --name matrixdb -p 8182:8182 -d --rm tinkerpop/gremlin-server",
-    "local:db:stop": "docker stop matrixdb",
+    "db:local:start": "docker run --name matrixdb -p 8182:8182 -d --rm tinkerpop/gremlin-server",
+    "db:local:stop": "docker stop matrixdb",
+    "db:seed": "npx ts-node src/data/seed-data/seed.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -45,14 +46,12 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
-    "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.8.2"
   },
