--- a/server/package.json
+++ b/server/package.json
@@ -53,7 +53,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "utility-types": "^3.10.0"
   },
   "jest": {
     "moduleFileExtensions": [
