--- a/UI/Comparison/tsconfig.json
+++ b/UI/Comparison/tsconfig.json
@@ -6,6 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "allowJs": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -15,12 +17,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react-jsx",
-    "downlevelIteration": true,
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "declaration": true,
-    "incremental": true,
+    "downlevelIteration": true
   },
   "include": [
     "src"
