express server for container and comparison

--- a/UI/ContentServer/tsconfig.json
+++ b/UI/ContentServer/tsconfig.json
@@ -9,11 +9,7 @@
         "outDir": "dist",
         "baseUrl": ".",
         "incremental": true,
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
+        "declaration": true
     },
     "include": [
         "src/**/*"
