--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -1,6 +1,7 @@
 {
   "name": "skills-matrix",
   "version": "0.1.0",
+  "main": "dist/server.js",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -10,6 +11,7 @@
     "browserslist": "^4.21.3",
     "camelcase": "^7.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "contentserver": "file:../ContentServer",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "dotenv": "^16.0.2",
@@ -31,8 +33,10 @@
     "web-vitals": "^3.0.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "preinstall": "cd ../ContentServer && npm run build",
+    "prestart": "npm run build",
+    "start": "node .",
+    "build": "tsc --project server.tsconfig.json && node scripts/build.js",
     "test": "node scripts/test.js",
     "client:generate": "openapi-generator-cli generate"
   },
@@ -96,7 +100,7 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-dev-server": "^4.10.1",
     "webpack-manifest-plugin": "^5.0.0",
