--- a/UI/ContentServer/package.json
+++ b/UI/ContentServer/package.json
@@ -5,8 +5,6 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
     "test": "jest"
   },
   "repository": {
@@ -19,6 +17,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "typescript": "^4.8.4"
   }
 }
