--- a/UI/package.json
+++ b/UI/package.json
@@ -2,10 +2,13 @@
   "name": "ui-container",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/server.js",
   "private": true,
   "scripts": {
-    "build": "webpack",
-    "start": "concurrently \"webpack serve\" \"cd Comparison && npm start\"",
+    "preinstall": "cd ContentServer && npm run build",
+    "build": "tsc --project server.tsconfig.json && webpack",
+    "prestart": "npm run build",
+    "start": "concurrently \"node .\" \"cd Comparison && npm start\"",
     "test": "jest"
   },
   "repository": {
@@ -19,6 +22,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
+    "contentserver": "file:ContentServer",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -40,7 +44,6 @@
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-cli": "^4.10.0"
   }
 }
