--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -4,40 +4,17 @@
   "main": "dist/server.js",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.21.3",
-    "camelcase": "^7.0.0",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "contentserver": "file:../ContentServer",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "dotenv": "^16.0.2",
-    "dotenv-expand": "^9.0.0",
-    "fabric": "^4.6.0",
-    "fabricjs-react": "^1.0.8",
-    "identity-obj-proxy": "^3.0.0",
-    "prompts": "^2.4.2",
-    "react": "^17.0.2",
-    "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "^17.0.2",
-    "react-refresh": "^0.14.0",
-    "resolve": "^1.22.1",
-    "skills-matrix-server": "file:../../server",
-    "tailwindcss": "^3.1.8",
-    "ui-container": "file:..",
-    "utility-types": "^3.10.0",
-    "web-vitals": "^3.0.1"
+    "@skillsmatrix/contentserver": "^1.0.0"
   },
   "scripts": {
-    "preinstall": "cd ../ContentServer && npm run build",
-    "prestart": "npm run build",
-    "start": "node .",
-    "build": "tsc --project server.tsconfig.json && node scripts/build.js",
-    "test": "node scripts/test.js",
+    "build": "tsc --project server.tsconfig.json && webpack",
+    "prebuild:container": "cd node_modules/localbuildinfrastructure && npm start",
+    "build:container": "docker build . --network=host --tag skills-matrix-ui-comparison:latest",
+    "postbuild:container": "docker image tag skills-matrix-ui-comparison:latest localhost:5000/skills-matrix-ui-comparison:latest && docker push localhost:5000/skills-matrix-ui-comparison:latest",
+    "prestart": "npm run build:container",
+    "start": "docker run --detach --publish 127.0.0.1:8082:80 skills-matrix-ui-comparison",
+    "serve": "node .",
+    "test": "jest",
     "client:generate": "openapi-generator-cli generate"
   },
   "eslintConfig": {
@@ -59,107 +36,35 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.9",
     "@openapitools/openapi-generator-cli": "^2.5.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@svgr/webpack": "^6.3.1",
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.4.3",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@skillsmatrix/server": "^0.0.1",
+    "@skillsmatrix/ui-container": "^1.0.0",
     "@types/fabric": "^4.5.12",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^18.7.14",
-    "@types/react": "^17.0.49",
+    "@types/jest": "^29.1.2",
+    "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
+    "@types/react-redux": "^7.1.24",
     "@types/uuid": "^8.3.4",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.5",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
-    "eslint": "^8.23.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.2.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.3",
-    "jest-resolve": "^29.0.2",
-    "jest-watch-typeahead": "^2.1.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "npm-check-updates": "^16.0.6",
-    "postcss": "^8.4.16",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^7.0.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.8.0",
-    "resolve-url-loader": "^5.0.0",
-    "sass-loader": "^13.0.2",
-    "semver": "^7.3.7",
-    "source-map-loader": "^4.0.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-jest": "^28.0.8",
+    "concurrently": "^7.4.0",
+    "eslint": "^8.25.0",
+    "fabric": "^4.6.0",
+    "fabricjs-react": "^1.0.8",
+    "jest": "^29.2.0",
+    "localbuildinfrastructure": "file:../../LocalBuildInfrastructure",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "utility-types": "^3.10.0",
+    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.10.1",
-    "webpack-manifest-plugin": "^5.0.0",
-    "workbox-webpack-plugin": "^6.5.4"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "webpack-cli": "^4.10.0"
   }
 }
