--- a/UI/Comparison/server.tsconfig.json
+++ b/UI/Comparison/server.tsconfig.json
@@ -1,9 +1,8 @@
 {
-    "extends": "contentserver/tsconfig.json",
+    "extends": "@skillsmatrix/contentserver/tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist/",
-        "declaration": false,
-        "types": []
+        "declaration": false
     },
     "include": [
         "src/server.ts"
