--- a/UI/Comparison/tsconfig.json
+++ b/UI/Comparison/tsconfig.json
@@ -6,8 +6,6 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -17,9 +15,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "outDir": "./dist/public",
+    "sourceMap": true,
+    "incremental": true
   },
   "include": [
     "src"
