--- a/UI/ContentServer/package.json
+++ b/UI/ContentServer/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "contentserver",
+  "name": "@skillsmatrix/contentserver",
   "version": "1.0.0",
   "description": "an express server to serve UI fragments",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "cd node_modules/localbuildinfrastructure && npm start",
     "build": "tsc",
+    "postbuild": "npm publish",
     "test": "jest"
   },
   "repository": {
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "localbuildinfrastructure": "file:../../LocalBuildInfrastructure",
     "typescript": "^4.8.4"
   }
 }
