--- a/localBuildInfrastructure/docker-compose.yml
+++ b/localBuildInfrastructure/docker-compose.yml
@@ -1,5 +1,17 @@
 services:
-  registry:
+  container-registry:
     image: registry:latest
+    restart: unless-stopped
     ports:
       - 5000:5000
+  package-registry:
+    image: verdaccio/verdaccio
+    restart: unless-stopped
+    ports:
+      - 4873:4873
+    configs:
+      - source: verdaccio
+        target: /verdaccio/conf/config.yaml
+configs:
+  verdaccio:
+    file: verdaccio.yaml
