--- a/UI/package.json
+++ b/UI/package.json
@@ -26,7 +26,10 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
-    "@types/jest": "^29.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
@@ -34,7 +37,8 @@
     "concurrently": "^7.4.0",
     "eslint": "^8.25.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.2.0",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "localbuildinfrastructure": "file:../LocalBuildInfrastructure",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
