--- a/UI/Comparison/dockerfile
+++ b/UI/Comparison/dockerfile
@@ -1,16 +1,16 @@
-FROM node:16 AS build
+FROM node:18.12.0 AS build
 COPY package.json package.json
 COPY src src
 COPY tsconfig.json tsconfig.json
 COPY server.tsconfig.json server.tsconfig.json
 COPY webpack.config.js webpack.config.js
-COPY .npmrc .npmrc
+COPY docker.npmrc .npmrc
 RUN npm install
 RUN npm run build
 
-FROM node:16 AS run
-COPY package.json package.json
-COPY .npmrc .npmrc
+FROM node:18.12.0 AS run
+COPY --from=build package.json package.json
+COPY --from=build .npmrc .npmrc
 COPY --from=build dist dist
 RUN npm install --production
 
