--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@skillsmatrix/api": "file:api",
     "@skillsmatrix/contentserver": "file:UI/ContentServer",
-    "@skillsmatrix/server": "file:server",
     "@skillsmatrix/ui-container": "file:UI",
     "concurrently": "^7.4.0",
     "localbuildinfrastructure": "file:localBuildInfrastructure"
   },
   "scripts": {
     "package:ui-container": "cd node_modules/@skillsmatrix/ui-container && npm run publish",
-    "package:domain": "cd node_modules/@skillsmatrix/server && npm run build",
+    "package:domain": "cd node_modules/@skillsmatrix/api && npm run publish",
     "package:contentserver": "cd node_modules/@skillsmatrix/contentserver && npm run build",
     "build:packages": "concurrently \"npm run package:contentserver\" \"npm run package:domain\" && npm run package:ui:container",
     "start:infrastructure": "cd node_modules/localbuildinfrastructure && npm run start:build-tools",
