--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -50,7 +50,7 @@
     "@mui/material": "^5.10.9",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@reduxjs/toolkit": "^1.8.6",
-    "@skillsmatrix/server": "^0.0.1",
+    "@skillsmatrix/api": "^0.0.1",
     "@skillsmatrix/ui-container": "^1.0.0",
     "@types/fabric": "^4.5.12",
     "@types/jest": "^29.1.2",
