--- a/api/chart/skills-matrix-api/values.yaml
+++ b/api/chart/skills-matrix-api/values.yaml
@@ -1,4 +1,4 @@
-# Default values for skills-matrix-ui-comparison.
+# Default values for skills-matrix-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   host: null
-  name: skills-matrix-ui-comparison
+  name: skills-matrix-api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -43,7 +43,7 @@ service:
 
 ingress:
   enabled: true
-  className: "skills-matrix"
+  className: skills-matrix
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     # kubernetes.io/ingress.class: nginx
@@ -51,7 +51,7 @@ ingress:
   hosts:
     - host: localhost
       paths:
-        - path: /Comparison/(.*)
+        - path: /api/(.*)
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
