--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@skillsmatrix/api": "file:api",
-    "@skillsmatrix/contentserver": "file:UI/ContentServer",
-    "@skillsmatrix/ui-container": "file:UI",
     "concurrently": "^7.4.0",
-    "localbuildinfrastructure": "file:localBuildInfrastructure"
+    "localbuildinfrastructure": "file:localBuildInfrastructure",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "package:ui-container": "cd node_modules/@skillsmatrix/ui-container && npm publish",
-    "package:domain": "cd node_modules/@skillsmatrix/api && npm publish",
-    "package:contentserver": "cd node_modules/@skillsmatrix/contentserver && npm run build",
-    "build:packages": "concurrently \"npm run package:contentserver\" \"npm run package:domain\" && npm run package:ui:container",
+    "postinstall": "npm run start:infrastructure && ts-node scripts/installAndPackage.ts",
     "start:infrastructure": "cd node_modules/localbuildinfrastructure && npm run start:build-tools",
     "start:cluster": "cd node_modules/localbuildinfrastructure && npm run start:cluster",
-    "prestart": "concurrently \"npm run start:infrastructure\" \"npm run start:cluster\"",
+    "prestart": "npm run start:cluster",
     "start": "concurrently \"cd UI/Comparison && npm start\" \"cd UI && npm start\" \"cd server && npm start\"",
     "build": "concurrently \"cd UI/Comparison && npm run build\" \"cd UI && npm run build\" \"cd server && npm run build\"",
     "test": "concurrently \"cd UI/Comparison && npm test\" \"cd UI && npm test\" \"cd server && npm test\""
