[bypass] bypass containers
for when you just need to bypass containers to make it work...

--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
       "name": "skills-matrix-api",
       "repository": "oci://localhost:5000"
     },
-    "db": "ws://db:8182/gremlin"
+    "db": "ws://localhost:8182/gremlin"
   },
   "description": "",
   "author": "",
