--- a/UI/package.json
+++ b/UI/package.json
@@ -34,6 +34,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
+    "@skillsmatrix/contentserver": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -58,8 +59,5 @@
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "@skillsmatrix/contentserver": "^1.0.0"
   }
 }
