--- a/UI/package.json
+++ b/UI/package.json
@@ -15,10 +15,10 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc --project server.tsconfig.json && webpack",
-    "build:container": "ts-node scripts/buildContainer.ts",
-    "chart:publish": "ts-node scripts/publishChart.ts",
+    "build:container": "npx buildContainer",
+    "chart:publish": "npx publishChart",
     "prestart": "concurrently \"npm run build:container\" \"npm run chart:publish\"",
-    "start": "ts-node scripts/start.ts",
+    "start": "npx start",
     "poststart": "start chrome http://localhost:81",
     "serve": "node .",
     "test": "jest"
@@ -34,6 +34,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
+    "@skillsmatrix/buildscripts": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -53,7 +54,6 @@
     "redux": "^4.2.0",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
