--- a/api/package.json
+++ b/api/package.json
@@ -18,12 +18,12 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "build:container": "ts-node scripts/buildContainer.ts",
-    "chart:publish": "ts-node scripts/publishChart.ts",
+    "build:container": "npx buildContainer",
+    "chart:publish": "npx publishChart",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "db:seed": "npx ts-node src/data/seed-data/seed.ts",
     "prestart": "concurrently \"npm run build:container\" \"npm run chart:publish\"",
-    "start": "ts-node scripts/start.ts",
+    "start": "npx start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -50,6 +50,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@skillsmatrix/buildscripts": "^1.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
