get verdaccio to listen on all hosts, hopefully fix the "host.docker.internal" issues in npm install on both windows and mac

--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -6,7 +6,10 @@
   "config": {
     "container": {
       "name": "skills-matrix-ui-comparison",
-      "registry": "localhost:5000"
+      "registry": "localhost:5000",
+      "npm": {
+        "registry": "http://host.docker.internal:4873/"
+      }
     },
     "chart": {
       "name": "skillsmatrix-ui-comparison",
