--- a/UI/package.json
+++ b/UI/package.json
@@ -3,7 +3,10 @@
   "config": {
     "container": {
       "name": "skills-matrix-ui-container",
-      "registry": "localhost:5000"
+      "registry": "localhost:5000",
+      "npm": {
+        "registry": "http://host.docker.internal:4873/"
+      }
     },
     "chart": {
       "name": "skillsmatrix-uicontainer",
