--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,10 @@
   "config": {
     "container": {
       "name": "skills-matrix/api",
-      "registry": "localhost:5000"
+      "registry": "localhost:5000",
+      "npm": {
+        "registry": "http://host.docker.internal:4873/"
+      }
     },
     "chart": {
       "name": "skills-matrix/api",
