--- a/UI/ContentServer/.npmrc
+++ b/UI/ContentServer/.npmrc
@@ -1,2 +1,2 @@
-@skillsmatrix:registry=http://localhost:4873
+registry=http://localhost:4873
 //localhost:4873/:_authToken=anonymousbutnpmrequiresatoken
