--- a/api/dockerfile
+++ b/api/dockerfile
@@ -18,4 +18,4 @@ RUN npm install --production --registry=$REGISTRY
 
 EXPOSE 80 443
 ENV NODE_ENV=production
-ENTRYPOINT [ "npm", "run", "serve" ]
+ENTRYPOINT [ "npm", "run", "start:prod" ]
