--- a/UI/ContentServer/package.json
+++ b/UI/ContentServer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skillsmatrix/contentserver",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "an express server to serve UI fragments",
   "main": "dist/index.js",
   "scripts": {
@@ -14,10 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "applicationinsights": "^2.3.6",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "js-cookie": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
+    "@types/js-cookie": "^3.0.2",
     "typescript": "^4.8.4"
   }
 }
