--- a/UI/package.json
+++ b/UI/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.1",
   "name": "@skillsmatrix/ui-container",
   "config": {
     "container": {
@@ -13,7 +14,6 @@
       "repository": "oci://localhost:5000"
     }
   },
-  "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@microsoft/applicationinsights-react-js": "^3.4.0",
+    "@microsoft/applicationinsights-web": "^2.8.9",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
     "@skillsmatrix/buildscripts": "^1.0.0",
@@ -63,6 +65,6 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@skillsmatrix/contentserver": "^1.0.0"
+    "@skillsmatrix/contentserver": "^1.0.2"
   }
 }
