--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@skillsmatrix/buildscripts": "file:buildScripts",
     "concurrently": "^7.4.0",
-    "localbuildinfrastructure": "file:localBuildInfrastructure",
+    "localbuildinfrastructure": "file:infrastructure/local",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
