--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skillsmatrix/api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "config": {
     "container": {
       "name": "skills-matrix/api",
@@ -43,6 +43,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.1",
     "@nestjs/terminus": "^9.1.2",
+    "@skillsmatrix/georgesproject": "^1.0.0",
     "@types/gremlin": "^3.6.0",
     "applicationinsights": "^2.3.6",
     "gremlin": "^3.6.1",
