--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skillsmatrix/ui-comparison",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/server.js",
   "private": true,
   "config": {
@@ -65,7 +65,7 @@
     "concurrently": "^7.4.0",
     "eslint": "^8.25.0",
     "fabric": "^4.6.0",
-    "fabricjs-react": "^1.0.8",
+    "fabricjs-react": "1.0.8",
     "jest": "^29.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
