--- a/api/dockerfile
+++ b/api/dockerfile
@@ -14,7 +14,7 @@ ARG REGISTRY
 COPY --from=build package.json package.json
 COPY --from=build dist dist
 
-RUN npm install --production --registry=$REGISTRY
+RUN npm install --omit=dev --registry=$REGISTRY
 
 EXPOSE 80 443
 ENV NODE_ENV=production
