--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skillsmatrix/api",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "config": {
     "container": {
       "name": "skills-matrix/api",
@@ -24,7 +24,7 @@
     "build:container": "npx buildContainer",
     "chart:publish": "npx publishChart",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "db:seed": "npx ts-node src/data/seed-data/seed.ts",
+    "db:seed": "node dist/data/seed-data/seed.js",
     "prestart": "concurrently \"npm run build:container\" \"npm run chart:publish\"",
     "start": "npx installChart",
     "start:dev": "nest start --watch",
