--- a/api/package.json
+++ b/api/package.json
@@ -21,21 +21,25 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "build:container": "npx buildContainer",
+    "container:build": "npx buildContainer",
+    "container:publish": "npx publishContainer",
     "chart:publish": "npx publishChart",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "db:seed": "node dist/data/seed-data/seed.js",
-    "prestart": "concurrently \"npm run build:container\" \"npm run chart:publish\"",
+    "prestart": "concurrently \"npm run container:publish\" \"npm run chart:publish\"",
     "start": "npx installChart",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "ci:build": "npm run container:build",
+    "ci:lint": "concurrently --names \"eslint,helm\" \"npm run lint\" \"helm lint chart\"",
+    "ci:publish": "concurrently --names \"container,chart,package\" \"npm run container:publish\" \"npm run chart:publish\" \"npm publish\""
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -54,7 +58,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@skillsmatrix/buildscripts": "^1.0.0",
+    "@skillsmatrix/buildscripts": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
