--- a/UI/Comparison/package.json
+++ b/UI/Comparison/package.json
@@ -21,13 +21,18 @@
   },
   "scripts": {
     "build": "tsc --project server.tsconfig.json && webpack",
-    "build:container": "npx buildContainer",
+    "container:build": "npx buildContainer",
+    "container:publish": "npx publishContainer",
     "chart:publish": "npx publishChart",
-    "prestart": "concurrently \"npm run build:container\" \"npm run chart:publish\"",
+    "prestart": "concurrently \"npm run container:publish\" \"npm run chart:publish\"",
     "start": "npx installChart",
     "serve": "node .",
     "test": "jest",
-    "client:generate": "openapi-generator-cli generate"
+    "client:generate": "openapi-generator-cli generate",
+    "lint": "npx tsc --noEmit",
+    "ci:build": "npm run container:build",
+    "ci:lint": "concurrently --names \"typescript,helm\" \"npm run lint\" \"helm lint chart\"",
+    "ci:publish": "concurrently --names \"container,chart\" \"npm run container:publish\" \"npm run chart:publish\""
   },
   "eslintConfig": {
     "extends": [
@@ -53,9 +58,9 @@
     "@mui/material": "^5.10.9",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@reduxjs/toolkit": "^1.8.6",
-    "@skillsmatrix/api": "^1.0.0",
-    "@skillsmatrix/buildscripts": "^1.0.0",
-    "@skillsmatrix/ui-container": "^1.0.0",
+    "@skillsmatrix/api": "^1.1.2",
+    "@skillsmatrix/buildscripts": "^1.0.1",
+    "@skillsmatrix/ui-container": "^1.0.3",
     "@types/fabric": "^4.5.12",
     "@types/jest": "^29.1.2",
     "@types/react": "^17.0.50",
