--- a/api/dockerfile
+++ b/api/dockerfile
@@ -2,11 +2,12 @@ ARG REGISTRY=https://registry.npmjs.org/
 
 FROM node:18.12.0 AS build
 ARG REGISTRY
+
 COPY package.json package.json
+RUN npm install --@skillsmatrix:registry=$REGISTRY
+
 COPY src src
 COPY tsconfig.json tsconfig.json
-
-RUN npm install --registry=$REGISTRY
 RUN npm run build
 
 FROM node:18.12.0 AS run
@@ -14,7 +15,7 @@ ARG REGISTRY
 COPY --from=build package.json package.json
 COPY --from=build dist dist
 
-RUN npm install --omit=dev --registry=$REGISTRY
+RUN npm install --omit=dev --@skillsmatrix:registry=$REGISTRY
 
 EXPOSE 80 443
 ENV NODE_ENV=production
