$default-branch only works in templates, changing to actual default branch name

--- a/.github/workflows/UI-CD.yml
+++ b/.github/workflows/UI-CD.yml
@@ -1,6 +1,7 @@
 on:
   workflow_run:
-    branches: [ $default-branch ]
+    branches:
+      - master
     workflows: 
       - "Continuous Integration"
     types:
