--- a/.github/workflows/api-CI.yml
+++ b/.github/workflows/api-CI.yml
@@ -1,10 +1,12 @@
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - master
     paths:
       - ./api/**
   pull_request_target:
-    branches: [ $default-branch ] 
+    branches:
+      - master
     paths: 
       - ./api/**
 
